; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/phy/extr_mdio_bus.c_mdio_bus_suspend.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/phy/extr_mdio_bus.c_mdio_bus_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.phy_driver = type { i32 (%struct.phy_device*)* }
%struct.phy_device = type opaque
%struct.phy_device.0 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i32)* @mdio_bus_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mdio_bus_suspend(%struct.device* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.phy_driver*, align 8
  %7 = alloca %struct.phy_device.0*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.device*, %struct.device** %4, align 8
  %9 = getelementptr inbounds %struct.device, %struct.device* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.phy_driver* @to_phy_driver(i32 %10)
  store %struct.phy_driver* %11, %struct.phy_driver** %6, align 8
  %12 = load %struct.device*, %struct.device** %4, align 8
  %13 = call %struct.phy_device.0* @to_phy_device(%struct.device* %12)
  store %struct.phy_device.0* %13, %struct.phy_device.0** %7, align 8
  %14 = load %struct.phy_device.0*, %struct.phy_device.0** %7, align 8
  %15 = call i32 @mdio_bus_phy_may_suspend(%struct.phy_device.0* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %25

18:                                               ; preds = %2
  %19 = load %struct.phy_driver*, %struct.phy_driver** %6, align 8
  %20 = getelementptr inbounds %struct.phy_driver, %struct.phy_driver* %19, i32 0, i32 0
  %21 = load i32 (%struct.phy_device*)*, i32 (%struct.phy_device*)** %20, align 8
  %22 = load %struct.phy_device.0*, %struct.phy_device.0** %7, align 8
  %23 = bitcast %struct.phy_device.0* %22 to %struct.phy_device*
  %24 = call i32 %21(%struct.phy_device* %23)
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %18, %17
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local %struct.phy_driver* @to_phy_driver(i32) #1

declare dso_local %struct.phy_device.0* @to_phy_device(%struct.device*) #1

declare dso_local i32 @mdio_bus_phy_may_suspend(%struct.phy_device.0*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
